2005-09-28  Tor Lillqvist  <tml@novell.com>

	* em-composer-utils.c (reply_get_composer, get_reply_list,
	post_reply_to_message)
	* em-folder-view.c (emfv_format_link_clicked): Use
	g_ascii_strncasecmp() instead of strncasecmp(). We are comparing
	to literal ASCII strings, so just casefolding ASCII is
	enough. Also better for portability.

	* em-format-html-display.c: Define localtime_r() for Win32 using
	localtime() (which is thread-safe in Microsoft's C library).

	* mail-tools.c (mail_tool_do_movemail): Not implemented on Win32.

2005-09-28  Parthasarathi Susarla <sparthasarathi@novell.com>
	
	See bug ** 317329
	* em-vfolder-rule.c: (em_vfolder_rule_add_source):
	Do not add a NULL uri.

2005-09-26  S.Antony Vincent Pandian <santony@gmail.com>

	Fixes #208647

	* em-folder-tree.c : Have added a menu item Empty 
	Trash in the folder tree's context menu and also
	added its callback.

2005-09-22  Carsten Guenther <carsten.guenther@scalix.com>

	Fixes #316983

	* em-composer-utils.c (em_utils_send_receipt):
	Exchanged the FROM and TO fields so that a read
	receipt actually goes to the sender of the original
	message.

2005-09-21  Sankar P  <psankar@novell.com>

	* em-account-editor.c (emae_defaults_page):
	Added code to enable the sent folder button for accounts with
	"None" set as the Receiving Server type. 
	Fixes #315506

2005-09-15  Sankar P  <psankar@novell.com>

	* em-folder-tree-model.c (em_folder_tree_model_set_folder_info):
	* em-folder-tree.c (render_pixbuf): Added enum and the code to 
	change the icon for sent items folder. Fixes #257321
	
2005-09-02  Harish Krishnaswamy  <kharish@novell.com>

	* default/C/Inbox: Update the Welcome mail.

2005-08-25  Not Zed  <NotZed@Ximian.com>

	** See bug #314440.

	* em-format-html.c (efh_url_requested): check the content object's
	mime type, not the container, when seeing if the data should be
	written.
	(efh_write_text_html): add some debug.

	* em-format-html-display.c (efhd_html_button_press_event): fix
	debug.
