@@ -7,8 +7,9 @@
 	to literal ASCII strings, so just casefolding ASCII is
 	enough. Also better for portability.
 
-	* em-format-html-display.c: Define localtime_r() for Win32 using
-	localtime() (which is thread-safe in Microsoft's C library).
+	* em-format-html-display.c
+	* message-list.c: Define localtime_r() for Win32 using localtime()
+	(which is thread-safe in Microsoft's C library).
 
 	* mail-tools.c (mail_tool_do_movemail): Not implemented on Win32.
 
